added doc view, updated editing in patient view
need to implement functionality. right now we are only looking, nothing is functional

--- a/html/MedicalPassport.html
+++ b/html/MedicalPassport.html
@@ -92,13 +92,13 @@
             <p> Age: </p> <!-- # get from database  -->
           </div>
           <div class="col-12 col-sm-6 py-2 wow fadeInLeft" data-wow-delay="300ms">
-            <p> Phone Number: </p> <!-- # get from database  -->
+            <p> Phone Number: <button type="submit" class="btn btn-primary">Edit</button> </p> <!-- # get from database  -->
           </div>
           <div class="col-12 col-sm-6 py-2 wow fadeInRight">
-            <p> Address: </p> <!-- # get from database  -->
+            <p> Address: <button type="submit" class="btn btn-primary">Edit</button> </p> <!-- # get from database  -->
           </div>
           <div class="col-12 col-sm-6 py-2 wow fadeInLeft" data-wow-delay="300ms">
-            <p> Insurance Plan: </p> <!-- # get from database  -->
+            <p> Insurance Plan: <button type="submit" class="btn btn-primary">Edit</button> </p> <!-- # get from database  -->
           </div>
           <div class="col-12 col-sm-6 py-2 wow fadeInLeft" data-wow-delay="300ms">
             <p> Medical Conditions: </p> <!-- # get from database  -->
