--- a/html/DocViewMedicalPassport.html
+++ b/html/DocViewMedicalPassport.html
@@ -76,6 +76,9 @@
   <div class="page-section">
     <div class="container">
 
+        <!-- button for assigning patient check in -->
+        <button type="submit" class="btn btn-primary wow zoomIn">Assign Check In</button>
+
         <div class="row mt-5 ">
           <div class="col-12 col-sm-6 py-2 wow fadeInRight">
             <p> Patient ID: </p> <!-- # get from database  -->
@@ -104,8 +107,10 @@
           
 
         </div>
+       
 
-        <button type="submit" class="btn btn-primary wow zoomIn">Assign Check In</button>
+       <!-- button for exporting to pdf -->
+        <button type="submit" class="btn btn-primary wow zoomIn">Export to PDF</button>
 
     </div> <!-- .container -->
   </div> <!-- .page-section -->
