--- a/html/MedicalPassport.html
+++ b/html/MedicalPassport.html
@@ -58,6 +58,9 @@
               <a class="btn btn-primary ml-lg-3" href="#">Logout</a>
             </li>
           </ul>
+
+
+
         </div> <!-- .navbar-collapse -->
       </div> <!-- .container -->
     </nav>
@@ -106,6 +109,7 @@
           <div class="col-12 col-sm-6 py-2 wow fadeInUp" data-wow-delay="300ms">
             <p> Allergies: </p> <!-- # get from database  -->
           </div>
+          <button type="submit" class="btn btn-primary wow zoomIn">Export to PDF</button>
           
         </div>
 
