--- a/html/MedicalPassport.html
+++ b/html/MedicalPassport.html
@@ -109,7 +109,10 @@
           <div class="col-12 col-sm-6 py-2 wow fadeInUp" data-wow-delay="300ms">
             <p> Allergies: </p> <!-- # get from database  -->
           </div>
-          <button type="submit" class="btn btn-primary wow zoomIn">Export to PDF</button>
+          <form action="exportToCSV.php">
+          <input type="button" value="Download CSV File For My Appointments">
+          </form>
+          <!-- <button type="submit" class="btn btn-primary wow zoomIn">Export to CSV</button>
           
         </div>
 
