--- a/html/MedicalPassport.html
+++ b/html/MedicalPassport.html
@@ -112,7 +112,7 @@
           <form action="exportToCSV.php">
           <input type="button" value="Download CSV File For My Appointments">
           </form>
-          <!-- <button type="submit" class="btn btn-primary wow zoomIn">Export to CSV</button>
+          <!-- <button type="submit" class="btn btn-primary wow zoomIn">Export to CSV</button> -->
           
         </div>
 
