--- a/html/docbio.html
+++ b/html/docbio.html
@@ -64,37 +64,26 @@
     <div class="container">
 
         <div class="row mt-5 ">
-          <div class="col-12 col-sm-6 py-2 wow fadeInRight">
+          <div class="col-12 col-sm-6 py-2">
             <p> Physician ID: </p> <!-- # get from database  -->
           </div>
-          <div class="col-12 col-sm-6 py-2 wow fadeInLeft">
+          <div class="col-12 col-sm-6 py-2">
             <p> Name: </p> <!-- # get from database  -->
           </div>
-          <div class="col-12 col-sm-6 py-2 wow fadeInRight">
+          <div class="col-12 col-sm-6 py-2">
             <p> Age: </p> <!-- # get from database  -->
           </div>
-          <div class="col-12 col-sm-6 py-2 wow fadeInLeft" data-wow-delay="300ms">
+          <div class="col-12 col-sm-6 py-2">
             <p> Phone Number: <button type="submit" class="btn btn-primary">Edit</button></p> <!-- # get from database  -->
-
-
           </div>
-          <div class="col-12 col-sm-6 py-2 wow fadeInRight">
+          <div class="col-12 col-sm-6 py-2">
+            <p> Name of Practice: </p> <!-- # get from database  -->
+          </div>
+          <div class="col-12 col-sm-6 py-2 wow">
             <p> Address: <button type="submit" class="btn btn-primary" text="align-right" float="align-right" margin-left="-50%">Edit</button> </p> <!-- # get from database  -->
-          </div>
-          <div class="col-12 col-sm-6 py-2 wow fadeInLeft" data-wow-delay="300ms">
-            <p> Insurance Plan: <button type="submit" class="btn btn-primary">Edit</button> </p> <!-- # get from database  -->
-          </div>
-          <div class="col-12 col-sm-6 py-2 wow fadeInLeft" data-wow-delay="300ms">
-            <p> Medical Conditions: <button type="submit" class="btn btn-primary">Edit</button> </p> <!-- # get from database  -->
-          </div>
-          <div class="col-12 col-sm-6 py-2 wow fadeInUp" data-wow-delay="300ms">
-            <p> Allergies: <button type="submit" class="btn btn-primary">Edit</button> </p> <!-- # get from database  -->
-          </div>
-          <div class="col-12 col-sm-6 py-2 wow fadeInUp" data-wow-delay="300ms">
-            <p> Degree: <button type="submit" class="btn btn-primary">Edit</button> </p> <!-- # get from database  -->
-          </div>
-          <div class="col-12 col-sm-6 py-2 wow fadeInUp" data-wow-delay="300ms">
-            <p> Qualifications: <button type="submit" class="btn btn-primary">Edit</button> </p> <!-- # get from database  -->
+          </div> 
+          <div class="col-12 col-sm-6 py-2">
+            <p> Speciality:  </p> <!-- # get from database  -->
           </div>
           
         </div>
